[gd_scene load_steps=4 format=1]

[ext_resource path="res://ui/layer_manager.gd" type="Script" id=1]
[ext_resource path="res://icons/stack.png" type="Texture" id=2]
[ext_resource path="res://icons/trash-can.png" type="Texture" id=3]

[node name="layer_management_panel_container" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 125.0
margin/bottom = 300.0
script/script = ExtResource( 1 )

[node name="button_panel_container" type="PanelContainer" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 52.0

[node name="panel" type="Panel" parent="button_panel_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 7.0
margin/top = 7.0
margin/right = 118.0
margin/bottom = 45.0

[node name="h_box_container" type="HBoxContainer" parent="button_panel_container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 118.0
margin/bottom = 45.0
alignment = 1

[node name="new_layer_button" type="Button" parent="button_panel_container/h_box_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 0.0
margin/right = 53.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 2 )
flat = false

[node name="delete_layer_button" type="Button" parent="button_panel_container/h_box_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 57.0
margin/top = 0.0
margin/right = 101.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = false

[node name="panel_container" type="PanelContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 50.0
margin/right = 0.0
margin/bottom = 0.0

[node name="panel" type="Panel" parent="panel_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 7.0
margin/top = 7.0
margin/right = 118.0
margin/bottom = 243.0

[node name="scroll_container" type="ScrollContainer" parent="panel_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 118.0
margin/bottom = 243.0
scroll/horizontal = false
scroll/vertical = true

[node name="v_scroll_bar" type="VScrollBar" parent="panel_container/scroll_container"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 12.0
range/min = 0.0
range/max = 100.0
range/step = 0.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="v_box_container" type="VBoxContainer" parent="panel_container/scroll_container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 111.0
margin/bottom = 0.0
alignment = 0

[connection signal="pressed" from="button_panel_container/h_box_container/new_layer_button" to="." method="_on_new_layer_button_pressed"]

[connection signal="pressed" from="button_panel_container/h_box_container/delete_layer_button" to="." method="_on_delete_layer_button_pressed"]


